Fixed incorrect login alert
Beforehand, the alert was located below the login textboxes. Once
bootstrap was implemented on the login page, the alert caused the whole
page to shift. This update incorporates bootstraps' alert tag to allow
the alert to be placed at the top of the page with no page shifts.

--- a/css/style.css
+++ b/css/style.css
@@ -137,11 +137,13 @@
 }
 
 #loginFail {
+	position:absolute;
 	font-family: 'Exo', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
-	padding: 6px;
-	margin-top: 10px;
+	width:100%;
+	z-index:2;
+	text-align:center;
 }
 
 #indexLeftColumn {
